[metadata]
name = pyVTTrac
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause License
author = Taiga Tsukada
author_email = tsukada.cs@gmail.com
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find_namespace:
install_requires =
    numpy
    xarray
    julia
