[metadata]
name = pyVTTrac
version = 2024.1.0
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause License
author = Taiga Tsukada
author_email = tsukada.met@gmail.com
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find_namespace:
install_requires =
    numpy
    xarray
    juliacall
